--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,25 @@ chrono =  {version = "0.4.39", features = ["serde"]}
 clap = { version = "4.5.23", features = ["derive"] }
 dotenvy = "0.15.7"
 lazy_static = "1.5.0"
-reqwest = { version = "0.12.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.42.0", features = ["full"] }
 csv = "1.3"
+ureq = { version ="2.12.1", features = ["json"] }
+postgres = "0.19.9"
+serde_qs = "0.13.0"
+urlencoding = "2.1.3"
+tabled = "0.17.0"
+iced = { version ="0.13.1", features = ["async-std"], optional = true }
+plotters-iced = { version = "0.11.0", optional = true }
+plotters = { version = "0.3.7", optional = true }
+sysinfo = { version = "0.33.1", optional = true }
+plotters-backend = { version = "0.3.7", optional = true }
+# latest version has windows crate versions that do not match
+xilem = { git = "https://github.com/linebender/xilem.git", branch = "main", optional = true}
+wgpu-hal = { version = "23.0.0", optional = true }
+winit = "0.30.7"
+masonry = "0.2.0"
+crossbeam-channel = "0.5.14"
 
 [build-dependencies]
 prettyplease = "0.2"
@@ -29,11 +43,29 @@ serde_json = "1.0"
 syn = "2.0"
 typify = "0.3"
 
-[[bin]]
-name = "aac"
-path = "bin/cli.rs"
+# [[bin]]
+# name = "aac"
+# path = "bin/cli.rs"
+
+
+ [[bin]]
+ name = "iced"
+ path = "bin/iced.rs"
+required-features = ["iced"]
+
+
+ [[bin]]
+ name = "xilem"
+ path = "bin/xilem.rs"
+ required-features = ["xilem"]
+
 
 # The profile that 'dist' will build with
 [profile.dist]
 inherits = "release"
 lto = "thin"
+
+[features]
+default = ["xilem"]
+iced = ["dep:iced", "dep:plotters-iced", "dep:sysinfo", "dep:plotters-backend", "dep:plotters"]
+xilem = ["dep:xilem", "dep:wgpu-hal"]
